# image-styler

./: .gitignore  METRICS_QUICK_START.md  PROMETHEUS_QUERIES.md  README.md  app.py  debug.py  docker-compose.yml  image_generator.py  image_utils.py  logger_config.py  pyproject.toml  telemetry_config.py
config/: otel-collector-config.yml  prometheus.yml  tempo.yml
config/grafana/: dashboards.yml  datasources.yml
config/grafana/dashboards/: image-styler-dashboard.json
